Fix spacing in header and quote

--- a/css/main.css
+++ b/css/main.css
@@ -32,8 +32,12 @@ article header p {
   margin-bottom: 0;
   border-bottom: .5px solid;
   padding-top: .05em;
-  padding-bottom: 1em;
+  padding-bottom: 1.5em;
   border-color: #555;
+}
+
+article header + p {
+  padding-top: 0.5em;
 }
 
 article p {
@@ -50,9 +54,11 @@ blockquote {
   padding-right: 2em;
 }
 
-blockquote .quote {
+.quote {
   font-size: 1.125rem;
+  font-style: normal;
   color: #999;
+  line-height: 1.3;
 }
 
 body {
